--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -26,7 +26,8 @@ on:
 
       - main
 
-
+permissions:
+  contents: write
 
 jobs:
 
@@ -65,12 +66,8 @@ jobs:
           # Define the output files and their configurations
 
           outputs: |
-
-            dist/github-snake.svg
-
-            dist/github-snake-dark.svg?palette=github-dark
-
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+              dist/github-contribution-grid-snake.svg
+              dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
         env:
 
